# plugin-example

./: Cargo.toml  Makefile  README.md
application/: Cargo.toml
application/data/: app_config.json
application/src/: app.rs  error.rs  main.rs  plugin.rs
application/src/utils/: config.rs  mod.rs  vec_from_map.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs
common/src/openc2/: args.rs  command.rs  mod.rs  response.rs  target.rs
common/src/util/: desensitization.rs  mod.rs
plugin_fw/: Cargo.toml
plugin_fw/src/: lib.rs
plugin_server/: Cargo.toml
plugin_server/src/: lib.rs
