[package]
name = "plugin"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
abi_stable = { version = "=0.10.3" }
arrayvec = "0.5.1"
common = { version = "0.1.0", path = "../common" }
core_extensions = { version = "1.4.0", default_features = false, features = [
	"std",
] }
lazy_static = "1.4.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
shadow-rs = "0.8.0"
smallvec = "1.4.2"
thiserror = "1.0.30"

[build-dependencies]
shadow-rs = "0.8.0"
