[package]
name = "plugin_server"
version = "0.1.0"
edition = "2021"

[lib]
# This way, the shared object will be saved as `abi_stable` prefers, for example
# `libexample.so`.
name = "plugin_server"
# This is required so that the library is compiled as a shared library. See:
#
# * https://doc.rust-lang.org/cargo/reference/cargo-targets.html#the-crate-type-field
# * https://doc.rust-lang.org/reference/linkage.html
crate-type = ["cdylib"]

[dependencies]
common = { version = "0.1.0", path = "../common" }
abi_stable = { version = "=0.10.3" }
core_extensions = { version = "1.4.0", default_features = false, features = [
	"std",
] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
